# neuralnetwork

./: .gitignore  README.md  matrix.py  multilayer_perceptron.py  requirements.txt  tests.py  util.py
cpp_implementation/: CMakeLists.txt  main.cpp  multilayer_perceptron.hpp
cpp_implementation/include/: matrix.hpp  multilayer_perceptron.hpp
examples/: __init__.py  __main__.py  alphabet.py  cubic_function.py  matrix_compression.py  quadratic_function.py  xor.py
